// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`渲染上浮之后的Label 1`] = `
<label
  className="InputLabel-unslap-0 iEzkbd"
>
  用户名
</label>
`;

exports[`渲染密集模式下的Label 1`] = `
<label
  className="InputLabel-unslap-0 hGvqym"
>
  用户名
</label>
`;
